--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "typescript": "^4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
