--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "heroku": "^7.51.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
-    "mongoose": "^5.11.14"
+    "mongoose": "^5.11.14",
+    "nodemon": "^2.0.7"
   }
 }
